--- a/src/app/components/upload/upload.component.html
+++ b/src/app/components/upload/upload.component.html
@@ -2,7 +2,7 @@
     <div class="col-md-6">
         <h4 class="font-weight-normal font-italic text-info">Subir Archivo</h4>
         <hr class="bg-info">
-        <div appNgDropFiles (mouseOver)="overDropZone = $event" [ngClass]="{'drop-over': overDropZone}" class="drop-zone animated fadeIn">
+        <div appNgDropFiles [files]="files" (mouseOver)="overDropZone = $event" [ngClass]="{'drop-over': overDropZone}" class="drop-zone animated fadeIn">
             <img class="img-responsive img-fluid" src="../../../assets/img/drop_files2.jpg" alt="">
         </div>
     </div>
@@ -12,7 +12,7 @@
 
         <div class="animated fadeInRight">
             <button type="button" class="btn btn-success mr-3" (click)="uploadFiles()" [disabled]="files.length === 0">Cargar Firebase</button>
-            <button type="button" class="btn btn-danger">Borrar Archivos</button>
+            <button type="button" class="btn btn-danger" (click)="clearFiles()">Borrar Archivos</button>
         </div>
 
         <div class="mt-3 animated fadeIn">
@@ -25,12 +25,12 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        <td>Nombre del Archivo</td>
-                        <td>Tamaño del Archivo</td>
+                    <tr *ngFor="let file of files">
+                        <td>{{ file.fileName }}</td>
+                        <td>{{ file.file.size / 1024 / 1024 | number:'0.2-2' }} MB</td>
                         <td>
                             <div class="progress">
-                                <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 25%"></div>
+                                <div class="progress-bar progress-bar-striped" role="progressbar" [ngStyle]="{'width': file.progress + '%'}" style="width: 25%"></div>
                             </div>
                         </td>
                     </tr>
