--- a/src/app/components/upload/upload.component.html
+++ b/src/app/components/upload/upload.component.html
@@ -26,7 +26,9 @@
                 </thead>
                 <tbody>
                     <tr *ngFor="let file of files">
-                        <td>{{ file.fileName }}</td>
+                        <td [ngClass]="{'text-success': file.progress >= 100}">
+                            {{ file.fileName }}
+                        </td>
                         <td>{{ file.file.size / 1024 / 1024 | number:'0.2-2' }} MB</td>
                         <td>
                             <div class="progress">
